minor bug fixes and adjusting cli for ease of use

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ license = { text = "Proprietary" }
 authors = [{ name = "KSI" }]
 dependencies = [
   "transformers",
+  "protobuf",
   "datasets",
   "accelerate",
   "torch",
